# rust-bytedata

./: Cargo.toml
src/: lib.rs  read.rs  write.rs
